--- a/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_seq2seq_traductor.ipynb
+++ b/Tratamiento_de_Lenguaje_Natural/Cuadernos/nlp_seq2seq_traductor.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/writing.jpg\" width=\"700\" height=\"600\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/writing.jpg\" width=\"700\" height=\"600\" align=\"center\"/>\n",
     "</center>\n",
     "</figure>\n",
     "\n",
@@ -55,7 +55,7 @@
    "source": [
     "<figure>\n",
     "<center>\n",
-    "<img src=\"../Imagenes/seq2seq.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
+    "<img src=\"https://raw.githubusercontent.com/AprendizajeProfundo/Libro-Fundamentos/main/Tratamiento_de_Lenguaje_Natural/Imagenes/seq2seq.png\" width=\"500\" height=\"400\" align=\"center\"/>\n",
     "</center>\n",
     "<figcaption>\n",
     "<p style=\"text-align:center\">Arquitectura del modelo seq2seq</p>\n",
